--- a/package.json
+++ b/package.json
@@ -5,7 +5,15 @@
   "main": "start.js",
   "scripts": {
     "start": "node start.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "js:compile": "",
+    "js:uglify": "",
+    "build:js": "npm run js:compile && npm run js:uglify",
+    "css:compile": "node-sass src/sass/ -o public/css/ --output-style compressed",
+    "css:rename": "renamer --find \".css\" --replace \".min.css\" \"public/css/*\"",
+    "css:autoprefix": "postcss -r public/css/* -u autoprefixer",
+    "build:css": "npm run css:compile && npm run css:rename && npm run css:autoprefix",
+    "build": "npm run build:js && npm run build:css"
   },
   "author": "Miguel Serrano",
   "license": "ISC",
@@ -29,5 +37,13 @@
   },
   "engines": {
     "node": "6.2.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^6.3.6",
+    "babel-cli": "^6.9.0",
+    "babel-preset-es2015": "^6.9.0",
+    "node-sass": "^3.7.0",
+    "postcss-cli": "^2.5.2",
+    "renamer": "^0.5.7"
   }
 }
