added build scripts

--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "description": "Web and API server for WANTit",
   "main": "start.js",
   "scripts": {
-    "start": "node start.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "js:compile": "",
-    "js:uglify": "",
-    "build:js": "npm run js:compile && npm run js:uglify",
+    "start": "node start.js",
+    "js:clean": "rm -rf public/js/*",
+    "js:compile": "babel src/js -d public/js",
+    "js:uglify": "uglifyjs-folder public/js/ test-folder -eo public/js/",
+    "build:js": "npm run css:clean && npm run js:compile && npm run js:uglify",
+    "css:clean": "rm -rf public/css/*",
     "css:compile": "node-sass src/sass/ -o public/css/ --output-style compressed",
-    "css:rename": "renamer --find \".css\" --replace \".min.css\" \"public/css/*\"",
+    "css:rename": "renamer \"public/css/*\" --find \".css\" --replace \".min.css\"",
     "css:autoprefix": "postcss -r public/css/* -u autoprefixer",
-    "build:css": "npm run css:compile && npm run css:rename && npm run css:autoprefix",
+    "build:css": "npm run css:clean && npm run css:compile && npm run css:rename && npm run css:autoprefix",
     "build": "npm run build:js && npm run build:css"
   },
   "author": "Miguel Serrano",
@@ -44,6 +46,7 @@
     "babel-preset-es2015": "^6.9.0",
     "node-sass": "^3.7.0",
     "postcss-cli": "^2.5.2",
-    "renamer": "^0.5.7"
+    "renamer": "^0.5.7",
+    "uglifyjs-folder": "^0.2.1"
   }
 }
