--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "good-console": "^6.1.1",
     "hapi": "^13.4.0",
     "hapi-auth-cookie": "^6.1.1",
+    "hapi-auth-jwt2": "^7.0.0",
     "hoek": "^4.0.0",
     "inert": "^4.0.0",
     "jade": "^1.11.0",
     "joi": "^8.1.0",
+    "jsonwebtoken": "^7.0.0",
     "lout": "^9.0.0",
     "sqlite3": "^3.1.4",
     "vision": "^4.1.0"
