--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bcryptjs": "^2.3.0",
     "boom": "^3.1.3",
     "crumb": "^6.0.1",
+    "dotenv": "^2.0.0",
     "glue": "^3.2.0",
     "good": "^7.0.0",
     "good-console": "^6.1.1",
