--- a/package.json
+++ b/package.json
@@ -10,9 +10,6 @@
   "author": "Miguel Serrano",
   "license": "ISC",
   "dependencies": {
-    "aguid": "^1.0.4",
-    "bcryptjs": "^2.3.0",
-    "boom": "^3.1.3",
     "crumb": "^6.0.1",
     "dotenv": "^2.0.0",
     "glue": "^3.2.0",
@@ -22,13 +19,8 @@
     "hapi-auth-cookie": "^6.1.1",
     "hapi-auth-jwt2": "^7.0.0",
     "hoek": "^4.0.0",
-    "inert": "^4.0.0",
-    "jade": "^1.11.0",
-    "joi": "^8.1.0",
-    "jsonwebtoken": "^7.0.0",
     "lout": "^9.0.0",
-    "sqlite3": "^3.1.4",
-    "vision": "^4.1.0"
+    "sqlite3": "^3.1.4"
   },
   "engines": {
     "node": "6.2.0"
