--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "hapi-auth-cookie": "^6.1.1",
     "hapi-auth-jwt2": "^7.0.0",
     "hoek": "^4.0.0",
+    "inert": "^4.0.0",
     "lout": "^9.0.0",
     "sqlite3": "^3.1.4"
   },
