--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "hapi-auth-jwt2": "^7.0.0",
     "hoek": "^4.0.0",
     "inert": "^4.0.0",
+    "joi": "^8.4.0",
     "lout": "^9.0.0",
-    "sqlite3": "^3.1.4"
+    "sqlite3": "^3.1.4",
+    "vision": "^4.1.0"
   },
   "engines": {
     "node": "6.2.0"
