--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "inert": "^4.0.0",
     "joi": "^8.4.0",
     "lout": "^9.0.0",
+    "pmx": "^0.6.2",
     "sqlite3": "^3.1.4",
     "vision": "^4.1.0"
   },
