--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dotenv": "^2.0.0",
     "glue": "^3.2.0",
     "good": "^7.0.0",
-    "good-console": "^6.1.1",
+    "good-file": "^6.0.1",
+    "good-squeeze": "^4.0.0",
     "hapi": "^13.4.0",
     "hapi-auth-cookie": "^6.1.1",
     "hapi-auth-jwt2": "^7.0.0",
@@ -23,6 +24,7 @@
     "joi": "^8.4.0",
     "lout": "^9.0.0",
     "pmx": "^0.6.2",
+    "rotating-file-stream": "^1.0.5",
     "sqlite3": "^3.1.4",
     "vision": "^4.1.0"
   },
